--- a/package.json
+++ b/package.json
@@ -36,12 +36,26 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.34",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.34",
     "@babel/preset-env": "^7.0.0-beta.34",
+    "autoprefixer": "^7.2.2",
     "babel-loader": "^8.0.0-beta.0",
     "babel-minify-webpack-plugin": "^0.2.0",
     "chalk": "^2.3.0",
     "copy-webpack-plugin": "^4.2.3",
     "cross-spawn": "^5.1.0",
+    "css-loader": "^0.28.7",
+    "cssnano": "^4.0.0-rc.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "fs-extra": "^4.0.3",
+    "image-webpack-loader": "^3.4.2",
+    "postcss-calc": "^6.0.1",
+    "postcss-css-variables": "^0.8.0",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-loader": "^2.0.9",
+    "postcss-nested": "^2.1.2",
+    "style-loader": "^0.19.0",
+    "svgo-loader": "^2.1.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-config-utils": "^2.3.0",
     "webpack-merge": "^4.1.1"
