--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.3",
     "image-webpack-loader": "^3.4.2",
+    "opn": "^5.1.0",
     "postcss-calc": "^6.0.1",
     "postcss-css-variables": "^0.8.0",
     "postcss-flexbugs-fixes": "^3.2.0",
@@ -55,9 +56,12 @@
     "postcss-nested": "^2.1.2",
     "style-loader": "^0.19.0",
     "svgo-loader": "^2.1.0",
+    "url": "^0.11.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-config-utils": "^2.3.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-format-messages": "^1.0.1",
     "webpack-merge": "^4.1.1"
   }
 }
