--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prismdev/lightweight-bundler",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Lightweight bundler for landing pages",
   "engines": {
     "node": ">=8.9"
