--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss-loader": "^2.0.9",
     "postcss-nested": "^2.1.2",
     "style-loader": "^0.19.0",
+    "svgo": "^1.0.3",
     "svgo-loader": "^2.1.0",
     "url": "^0.11.0",
     "url-loader": "^0.6.2",
